Made user dashboard responsive on mobile. Fixed similar jobs

--- a/src/app/user/components/dashboard/dashboard.component.less
+++ b/src/app/user/components/dashboard/dashboard.component.less
@@ -1,9 +1,11 @@
 @import '../../../../variables';
 
+@transition-duration: 0.5s;
+
 .content-wrapper {
   display: flex;
   flex-direction: row;
-  overflow: hidden;
+  max-height: @height-content;
 
   .main-menu {
     border-radius: 0;
@@ -11,12 +13,37 @@
     border-top: 0;
     border-bottom: 0;
     margin-bottom: 0;
+    position: relative;
+    transition: all @transition-duration ease;
 
     background-image: radial-gradient(
       darken(@primary-color, 25%),
       darken(@primary-color, 40%)
     );
     background-size: 200%;
+
+    &.closed {
+      margin-left: -20rem;
+    }
+
+    .label {
+      border-radius: 0 4px 4px 0;
+      position: absolute;
+      left: 100%;
+      background-color: darken(@primary-color, 25%);
+      color: white;
+      padding: 0.8em 1.2em;
+      display: none;
+
+      .icon {
+        margin: 0;
+        transition: all @transition-duration ease;
+
+        &.rotate {
+          transform: rotate(180deg);
+        }
+      }
+    }
 
     .item {
       display: flex;
@@ -45,7 +72,21 @@
 
   .content {
     flex-grow: 1;
-    height: 100%;
+    max-height: 100%;
     padding: 2em 3em;
+    overflow-y: scroll;
+    min-width: 300px;
+  }
+}
+
+@media only screen and (max-width: @largestTabletScreen) {
+  .main-menu {
+    .label {
+      display: inline-block !important;
+    }
+  }
+
+  .content {
+    padding-top: 4.4em !important;
   }
 }
