--- a/src/styles.less
+++ b/src/styles.less
@@ -1,7 +1,10 @@
 @import './variables';
 
+html,
 body {
   height: initial;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 :focus {
